// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatus renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status test"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r2:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r3:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r2:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r2:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r2:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders status toggle icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r6:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r7:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r6:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 32 32"
                  width="1em"
                >
                  <path
                    d="M31 16c0 8.271-6.729 15-15 15-.806 0-1.614-.064-2.401-.191a1 1 0 0 1 .318-1.974c.683.11 1.384.166 2.083.166 7.168 0 13-5.832 13-13S23.168 3 16 3a1 1 0 1 1 0-2c8.271 0 15 6.729 15 15ZM5.299 23.384a1 1 0 1 0-1.645 1.138 15.011 15.011 0 0 0 3.824 3.824.997.997 0 0 0 1.39-.253 1 1 0 0 0-.254-1.391 13.037 13.037 0 0 1-3.316-3.317ZM2 15a1 1 0 0 0-1 1c0 .802.064 1.61.191 2.401a1 1 0 1 0 1.974-.318A13.199 13.199 0 0 1 2.999 16a1 1 0 0 0-1-1Z"
                  />
                </svg>
              </div>
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r6:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r6:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders status toggle text 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r4:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r4:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              >
                test
              </div>
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r4:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r4:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatus renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-multiple-file-upload__status"
  >
    <div
      class="pf-v6-c-expandable-section pf-m-expanded"
    >
      <div
        class="pf-v6-c-expandable-section__toggle"
      >
        <button
          aria-controls="pf-expandable-section-:r0:-content"
          aria-expanded="true"
          class="pf-v6-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-:r1:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          id="pf-expandable-section-:r0:-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon pf-m-start"
          >
            <span
              class="pf-v6-c-expandable-section__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-button__text"
          >
            <div
              class="pf-v6-c-multiple-file-upload__status-progress"
            >
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-icon"
              />
              <div
                class="pf-v6-c-multiple-file-upload__status-progress-text"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="pf-expandable-section-:r0:-toggle"
        class="pf-v6-c-expandable-section__content"
        id="pf-expandable-section-:r0:-content"
        role="region"
      >
        <ul
          class="pf-v6-c-multiple-file-upload__status-list"
          role="list"
        >
          Foo
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
